# any4hdmi

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: limmt_amass.json
docs/: dataset.md  dataset_format.md  pipeline.md
src/any4hdmi/: __init__.py  filter_dataset.py  format.py  viewer.py
src/any4hdmi/core/: format.py  model.py
src/any4hdmi/dataset/: __init__.py  base.py  cache.py  distributed_shard.py  fk_cache.py  fp16_backing.py  full.py  interpolation.py  loaders.py  loading.py  router.py  types.py  windowed.py
src/any4hdmi/datasets/: common.py  lafan.py  sonic.py
src/any4hdmi/fk/: __init__.py  runner.py
src/any4hdmi/limmt/: README.md  __init__.py  common.py  embed.py  embedding_viewer.py  gqs.py  hme.py  physical_filter.py  score_browser.py  train_hme.py  visualize.py
src/any4hdmi/limmt/hme/: __init__.py  features.py  loading.py  model.py  train.py
src/any4hdmi/scripts/: __init__.py  filter.py  viewer.py
src/any4hdmi/scripts/preprocess/: __init__.py  axellwppr.py  gmr.py  lafan.py  sonic.py
src/any4hdmi/utils/: __init__.py  dataset.py  mjcf.py
tasks/limmt_amass_gqs/: commands.md  done.md  humanoid_gpt_hme_reference.md  metrics.md  ongoing.md  plan.md  todo.md
tasks/limmt_contact_based_physics_filter/: plan.md
tests/: test_dataset_loading.py  test_dataset_router.py  test_distributed_shard.py  test_fk_cache_build.py  test_fp16_backing.py  test_gmr.py  test_interpolation_packed.py  test_limmt.py  test_limmt_embedding_viewer.py  test_limmt_score_browser.py  test_motion_qvel.py  test_viewer.py  test_windowed_prefetch.py
