[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "any4hdmi"
version = "0.1.0"
description = "Unified qpos-based motion conversion and MuJoCo playback for HDMI-related datasets."
requires-python = ">=3.10"
dependencies = [
    "mjhub @ git+https://github.com/EGalahad/mjhub.git@main",
    "mujoco>=2.3.7",
    "mujoco-warp",
    "numpy>=1.23",
    "tensordict",
    "torch",
    "tqdm>=4.66",
    "warp-lang",
]

[project.scripts]
any4hdmi-view = "any4hdmi.scripts.viewer:main"
any4hdmi-convert-lafan = "any4hdmi.scripts.preprocess.lafan:main"
any4hdmi-convert-sonic = "any4hdmi.scripts.preprocess.sonic:main"
any4hdmi-filter-dataset = "any4hdmi.scripts.filter:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
